--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -61,9 +61,13 @@ a {
     opacity: 0.85;
   }
 
-  &:active,
   &:focus {
     outline: none;
+  }
+  &:focus-visible {
+    outline: 2px solid $indigo;
+    outline-offset: 2px;
+    border-radius: 2px;
   }
 }
 
